[package]
name = "bevy_trackball"
version = "0.9.0"
rust-version = "1.85.0"
edition = "2024"
authors = ["Rouven Spreckels <rs@qu1x.dev>"]
description = "Coherent virtual trackball controller/camera plugin for Bevy"
homepage = "https://qu1x.dev/bevy_trackball"
documentation = "https://doc.qu1x.dev/bevy_trackball"
repository = "https://github.com/qu1x/bevy_trackball"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = [
	"virtual-trackball",
	"exponential-map",
	"coherent-rotation",
	"pan-orbit",
	"bevy-camera",
]
categories = [
	"graphics",
	"rendering",
	"game-engines",
	"science",
]
include = [
	"src/**/*.rs",
	"examples/**/*.rs",
	"Cargo.toml",
	"README.md",
	"RELEASES.md",
	"LICENSES/*.md",
]

[package.metadata.docs.rs]
features = ["serialize", "bevy/wayland"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
c11-orbit = ["trackball/cc"]
serialize = ["bevy/serialize", "trackball/serde", "bevy_egui?/serde"]
bevy_egui = ["dep:bevy_egui"]

[dependencies]
trackball = { version = "0.15.0", features = ["glam"] }
bevy_egui = { version = "0.33.0", default-features = false, features = ["render"], optional = true }

[dependencies.bevy]
version = "0.15.2"
default-features = false
features = [
	"bevy_render",
	"bevy_window",
	"bevy_winit",
]

[dev-dependencies.bevy]
version = "0.15.2"
default-features = false
features = [
	"custom_cursor",
	"bevy_core_pipeline",
	"bevy_picking",
	"bevy_pbr",
	"ktx2",
	"zstd",
	"tonemapping_luts",
	"wayland",
	"webgl2",
]

[[example]]
name = "exponential_map"
required-features = []
[[example]]
name = "gliding_clamp"
required-features = ["bevy/bevy_ui", "bevy/default_font"]
[[example]]
name = "constellation_clamp"
required-features = ["bevy/bevy_ui", "bevy/default_font"]
[[example]]
name = "egui"
required-features = ["bevy_egui/default_fonts"]
[[example]]
name = "scaling_modes"
required-features = []

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1

[lints.rust]
unsafe-code = "forbid"
missing-docs = "forbid"

[lints.rustdoc]
broken-intra-doc-links = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
tabs-in-doc-comments = "allow"
module-name-repetitions = "allow"
