[package]
name = "bevy_trackball"
version = "0.14.0-rc.1"
rust-version = "1.89.0"
edition = "2024"
authors = ["Rouven Spreckels <rs@qu1x.dev>"]
description = "Coherent virtual trackball controller/camera plugin for Bevy"
homepage = "https://qu1x.dev/bevy_trackball"
documentation = "https://doc.qu1x.dev/bevy_trackball"
repository = "https://github.com/qu1x/bevy_trackball"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = [
	"virtual-trackball",
	"exponential-map",
	"coherent-rotation",
	"pan-orbit",
	"bevy-camera",
]
categories = [
	"graphics",
	"rendering",
	"game-engines",
	"science",
]
include = [
	"src/**/*.rs",
	"examples/**/*.rs",
	"Cargo.toml",
	"README.md",
	"RELEASES.md",
	"LICENSES/*.md",
]

[package.metadata.docs.rs]
features = ["serialize", "bevy/wayland"]
cargo-args = ["-Z", "unstable-options", "-Z", "rustdoc-scrape-examples"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["bevy_egui/default_fonts", "bevy/wayland", "bevy/bevy_ui", "bevy/default_font"]
c11-orbit = ["trackball/cc"]
serialize = ["bevy/serialize", "trackball/serde", "bevy_egui?/serde"]
bevy_egui = ["dep:bevy_egui"]

[dependencies]
trackball = { version = "0.17.0", features = ["glam"] }
bevy_egui = { git = "https://github.com/vladbat00/bevy_egui", rev = "refs/pull/452/head", default-features = false, features = ["render"], optional = true }

[dependencies.bevy]
version = "0.18.0-rc"
default-features = false
features = [
	"bevy_render",
	"bevy_window",
	"bevy_winit",
	"trace",
]

[dev-dependencies.bevy]
version = "0.18.0-rc"
default-features = false
features = [
	"bevy_core_pipeline",
	"bevy_pbr",
	"bevy_picking",
	"bevy_post_process",
	"custom_cursor",
	"multi_threaded",
	"ktx2",
	"tonemapping_luts",
	"wayland",
	"webgl2",
	"zstd_rust",
]

[[example]]
name = "exponential_map"
required-features = []
doc-scrape-examples = true
[[example]]
name = "gliding_clamp"
required-features = ["bevy/bevy_ui_render"]
doc-scrape-examples = true
[[example]]
name = "constellation_clamp"
required-features = ["bevy/bevy_ui_render"]
doc-scrape-examples = true
[[example]]
name = "egui"
required-features = []
doc-scrape-examples = true
[[example]]
name = "scaling_modes"
required-features = []
doc-scrape-examples = true

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1

[lints.rust]
unsafe-code = "forbid"
missing-docs = "forbid"

[lints.rustdoc]
broken-intra-doc-links = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
tabs-in-doc-comments = "allow"
module-name-repetitions = "allow"
